<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListDescription">

    <ImageView
        android:id="@+id/ivDescription"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/biryani"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tvDesName"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_text"
        android:textSize="20sp"
        android:marqueeRepeatLimit="3"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_required"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/timeRequired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_50"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:textAlignment="center"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken_1kg"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rice"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Salt"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onions"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>


    </LinearLayout>

</LinearLayout>